--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: 055c4795f09fe218b101ab59ab6601e8fb5c60df89b60f5177b939a2682f819d
       with:
-        coverageCommand: go test -coverprofile=coverage.out ./... && gocov convert coverage.out > coverage.json
+        coverageCommand: bash scripts/test.sh
         coverageLocations: out:gocov
 
     
