--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
       with:
         coverageCommand: go test -coverprofile=c.out ./...
         coverageLocations: c.out:gocov
-
+        prefix: github.com/blueworrybear/livelogs
     
