--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,18 +8,18 @@ plugins:
     config:
       min_confidence: 0.9
 exclude_patterns:
-- 'config/'
-- 'db/'
-- 'dist/'
-- 'features/'
-- '**/node_modules/'
-- 'script/'
-- '**/spec/'
-- '**/test/'
-- '**/tests/'
-- 'Tests/'
-- '**/vendor/'
-- '**/*_test.go'
-- '**/*.d.ts'
-- '*.md'
-- 'mock/'
+- "config/"
+- "db/"
+- "dist/"
+- "features/"
+- "**/node_modules/"
+- "script/"
+- "**/spec/"
+- "**/test/"
+- "**/tests/"
+- "Tests/"
+- "**/vendor/"
+- "**/*_test.go"
+- "**/*.d.ts"
+- "*.md"
+- "mock/"
